<resources>
    <string name="app_name">Instaclone</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="description">Description</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>